Create the navigation bar.

--- a/client/manage-fit/src/app/app.component.html
+++ b/client/manage-fit/src/app/app.component.html
@@ -1,4 +1,15 @@
-<mat-slide-toggle (click)="toggle()">Toggle me!</mat-slide-toggle>
+<nav class="nav" mat-primary>
+
+    <button mat-raised-button routerLink="/clients">
+        Clients
+    </button>    
+    <button mat-raised-button routerLink="/nutritions">
+        Nutrition
+    </button>
+    <button mat-raised-button routerLink="/workouts">
+        Workouts
+    </button>
+</nav>
 
 
 
