--- a/client/manage-fit/src/styles.scss
+++ b/client/manage-fit/src/styles.scss
@@ -1,4 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+
+@include mat.core();
+
+$theme: mat.define-theme((
+  color: (
+    theme-type: dark,
+    primary: mat.$violet-palette,
+  ),
+  typography: (
+    brand-family: 'Comic Sans',
+    bold-weight: 900
+  ),
+  density: (
+    scale: -1
+  )
+));
+
+$primary-palette: mat.get-theme-color($theme, 'primary');
+$accent-palette:  mat.get-theme-color($theme, 'secondary');
+$warn-palette:    mat.get-theme-color($theme, 'error');
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
