--- a/client/manage-fit/src/app/app.component.scss
+++ b/client/manage-fit/src/app/app.component.scss
@@ -1,11 +1,26 @@
 @import '../styles.scss';
+.container{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.router-outlet{
+    width: 96%;
+    margin-top: 10px;
+}
 
 .nav{
-    width: 100%;
+    width: 96%;
+    margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 10px;
     background-color: $primary-palette;
     height: 8%;
+    border-radius: 30px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
