--- a/client/manage-fit/src/app/libs/clients/clients.component.html
+++ b/client/manage-fit/src/app/libs/clients/clients.component.html
@@ -2,15 +2,27 @@
     <mat-label>Search</mat-label>
     <input matInput placeholder="Search" [formControl]="searchFormControl">
 </mat-form-field>
-
+<div class="cards">
 @for (client of filteredClients; track $index) {
     <mat-card appearance="outlined" class="card">
-        <mat-card-content>{{ client.name }} </mat-card-content>
-        <mat-card-content>{{ client.weight }} </mat-card-content>
-        <mat-card-content>{{ client.height }} </mat-card-content>
-        <mat-card-content>{{ client.email }} </mat-card-content>
-        <mat-card-content>{{ client.uid }} </mat-card-content>
+        <mat-card-header>
+            <mat-card-title>{{ client.name }}</mat-card-title>
+            <mat-card-subtitle>{{ client.email }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            {{ client.weight }}
+            {{ client.height }}
+            {{ client.uid }} 
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button><mat-icon>edit</mat-icon>Edit</button>
+            <button mat-button (click)="deleteClientDialog(client.uid)"><mat-icon>delete</mat-icon>Remove</button>
+        </mat-card-actions>
     </mat-card>
 }@empty {
     <h1>There are no clients. Add clients to display them.</h1>
 }
+</div>
+<button class="floating" mat-fab aria-label="Add client button" (click)="openAddClientDialog()">
+    <mat-icon>add</mat-icon>
+</button>
