--- a/client/manage-fit/src/app/libs/clients/clients.component.html
+++ b/client/manage-fit/src/app/libs/clients/clients.component.html
@@ -15,7 +15,7 @@
             {{ client.uid }} 
         </mat-card-content>
         <mat-card-actions>
-            <button mat-button><mat-icon>edit</mat-icon>Edit</button>
+            <button mat-button [routerLink]="['/clients', client.uid]"><mat-icon>edit</mat-icon>Edit</button>
             <button mat-button (click)="deleteClientDialog(client.uid)"><mat-icon>delete</mat-icon>Remove</button>
         </mat-card-actions>
     </mat-card>
@@ -24,5 +24,5 @@
 }
 </div>
 <button class="floating" mat-fab aria-label="Add client button" (click)="openAddClientDialog()">
-    <mat-icon>add</mat-icon>
+   <mat-icon>add</mat-icon>
 </button>
