--- a/client/manage-fit/src/app/libs/nutritions/nutritions.component.html
+++ b/client/manage-fit/src/app/libs/nutritions/nutritions.component.html
@@ -1,1 +1,28 @@
-<p>nutritions works!</p>
+<mat-form-field class="search">
+    <mat-label>Search</mat-label>
+    <input matInput placeholder="Search" [formControl]="searchFormControl">
+</mat-form-field>
+<div class="cards">
+@for (nutrition of filteredNutritions; track $index) {
+    <mat-card appearance="outlined" class="card">
+        <mat-card-header>
+            <mat-card-title>{{ nutrition }}</mat-card-title>
+            <mat-card-subtitle>{{ nutrition }}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+            {{ nutrition }}
+            {{ nutrition }}
+            {{ nutrition }} 
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button [routerLink]="['/nutritions', nutrition]"><mat-icon>edit</mat-icon>Edit</button>
+            <button mat-button (click)="deleteNutritionDialog(nutrition)"><mat-icon>delete</mat-icon>Remove</button>
+        </mat-card-actions>
+    </mat-card>
+}@empty {
+    <h1>There are no nutritions. Add nutritions to display them.</h1>
+}
+</div>
+<button class="floating" mat-fab aria-label="Add nutrition button" (click)="openAddNutritionDialog()">
+   <mat-icon>add</mat-icon>
+</button>
