--- a/client/manage-fit/src/app/libs/clients/client/client.component.scss
+++ b/client/manage-fit/src/app/libs/clients/client/client.component.scss
@@ -13,3 +13,12 @@
     align-items: center;
     flex-direction: column;
 }
+
+.buttons{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+    width: 40%;
+}
